[package]
name = "kodegenix_task"
version = "0.1.0"
authors = ["ElVi2 <48282124+ElVi2@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.111"
serde_derive = "1.0.111"
serde-xml-rs = "0.4.0"
quick-xml = "0.18.1"
serde-xml-rs2 = "0.3.0"